[package]
name = "subscan"
version = "0.1.6"
edition = "2021"
description = "Next generation subdomain enumeration tool"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
colog = "1.3.0"
colored = "2.1.0"
dotenvy = "0.15.7"
enum_dispatch = "0.3.13"
env_logger = "0.11.5"
flume = "0.11.1"
futures = "0.3.31"
headless_chrome = { version = "1.0.15", default-features = false, features = ["fetch"] }
hickory-client = { version = "0.24.1", default-features = false }
hickory-resolver = "0.24.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
prettytable-rs = "0.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "tokio-macros"] }
tokio-util = "0.7.12"
csv = "1.3.1"

[dev-dependencies]
automod = "1.0.14"
hickory-server = "0.24.1"
md5 = "0.7.0"
stubr = "0.6.2"
tempfile = "3.14.0"

[package.metadata.cargo-machete]
ignored = ["prettytable-rs"]
