[package]
name = "subscan"
version = "1.3.1"
edition = "2021"
description = "A subdomain enumeration tool leveraging diverse techniques, designed for advanced pentesting operations"
documentation = "https://docs.rs/subscan"
homepage = "https://www.erdoganyoksul.com/subscan"
readme = "README.md"
authors = ["Erdoğan YOKSUL <erdoganyoksul3@gmail.com>"]
repository = "https://github.com/eredotpkfr/subscan"
license-file = "LICENSE"
keywords = [
    "pentesting-tool",
    "subdomain-finder",
    "bruteforce",
    "zonetransfer",
    "searchengines",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
colog = "1.3.0"
colored = "3.0.0"
csv = "1.4.0"
derive_more = { version = "2.0.1", features = ["deref", "display", "from"] }
dotenvy = "0.15.7"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
flume = "0.12.0"
futures = "0.3.31"
headless_chrome = { version = "1.0.20", default-features = false, features = ["fetch"] }
hickory-client = { version = "0.25.2", default-features = false }
hickory-resolver = { version = "0.25.2", default-features = false, features = ["system-config", "tokio"] }
itertools = "0.14.0"
log = "0.4.28"
prettytable-rs = "0.10.0"
regex = "1.12.2"
reqwest = { version = "0.12.25", features = ["json", "stream"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "tokio-macros"] }
tokio-util = "0.7.18"
url = "2.5.4"

[dev-dependencies]
automod = "1.0.15"
hickory-server = "0.25.2"
md5 = "0.8.0"
stubr = "0.6.2"
tempfile = "3.23.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[profile.coverage-ci]
inherits = "release"

[package.metadata.cargo-machete]
ignored = ["prettytable-rs"]
